--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,11 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  camera: ^0.8.1
+  tflite: ^1.1.1
+  image_picker: ^0.7.3
+  flutter_spinkit: ^5.0.0
+  sliding_sheet: ^0.5.0
 
 
   # The following adds the Cupertino Icons font to your application.
