--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,9 @@ flutter:
   # the material Icons class.
   uses-material-design: true
 
+  assets:
+    - assets/labels.txt
+    - assets/model_unquant.tflite
   # To add assets to your application, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
